# OptiSense-backend

./: .gitignore  Makefile  pyproject.toml
docker/: dev-docker-compose.yaml  docker-compose.yaml  local-docker-compose.yaml  nginx.conf
docker/app/: Dockerfile  template.env
docker/postgres/: local.env
src/optisense/: manage.py
src/optisense/api/: handlers.py  models.py  schemas.py  serializers.py  urls.py  views.py
src/optisense/api/management/commands/: generate_test_data.py
src/optisense/api/migrations/: 0001_initial.py
src/optisense/optisense/: asgi.py  settings.py  urls.py  wsgi.py
